--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,34 @@
 <!doctype html>
 <meta charset="utf-8"/>
+<!-- Add manifest -->
+<link rel="manifest" href="manifest.json">
+<!-- Tell the browser it's a PWA -->
+<meta name="mobile-web-app-capable" content="yes">
+<!-- Tell iOS it's a PWA -->
+<meta name="apple-mobile-web-app-capable" content="yes">
+<!-- Make sure theme-color is defined -->
+<meta name="theme-color" content="#536878">
+
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 <title>Base Example</title>
 <body>
   <div id="container"></div>
   <!--<script src="../__build__/shared.js"></script>-->
   <script src="../aurora-web.js"></script>
+  <script>
+      if ('serviceWorker' in navigator) {
+          window.addEventListener('load', function() {
+              navigator.serviceWorker.register('service-worker.js').then(function(registration) {
+                  // Registration was successful
+                  console.log('ServiceWorker registration successful with scope: ', registration.scope);
+              }, function(err) {
+                  // registration failed :(
+                  console.log('ServiceWorker registration failed: ', err);
+              }).catch(function(err) {
+                  console.log(err)
+              });
+          });
+      } else {
+          console.log('service worker is not supported');
+      }
+  </script>
