Image for service worker

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,10 @@
 <meta name="theme-color" content="#536878">
 
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
+
 <title>Base Example</title>
 <body>
   <div id="container"></div>
