--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,16 @@
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
+<link href="style/ad2hs.css" rel="stylesheet" type="text/css">
+
 <title>Base Example</title>
 <body>
-  <div id="container"></div>
+  <div id="container" class="app-container"></div>
+  <div class="ad2hs-prompt bounceInUp">
+    <h2>Add Aurora To Your Homescreen!</h2>
+    <button class="btn ad2hs-prompt-button" type="button"><span>Add</span></button>
+  </div>
+
   <!--<script src="../__build__/shared.js"></script>-->
   <script src="../aurora-web.js"></script>
   <script>
@@ -35,4 +42,62 @@
       } else {
           console.log('service worker is not supported');
       }
+
+      function addToHomeScreen() {
+          var a2hsBtn = document.querySelector(".ad2hs-prompt");  // hide our user interface that shows our A2HS button
+          a2hsBtn.style.display = 'none';  // Show the prompt
+          deferredPrompt.prompt();  // Wait for the user to respond to the prompt
+          deferredPrompt.userChoice
+              .then(function(choiceResult){
+
+                  if (choiceResult.outcome === 'accepted') {
+                      console.log('User accepted the A2HS prompt');
+                  } else {
+                      console.log('User dismissed the A2HS prompt');
+                  }
+
+                  deferredPrompt = null;
+
+              });}
+
+      let deferredPrompt;
+      function showAddToHomeScreen() {
+
+          var a2hs = document.querySelector(".ad2hs-prompt");
+
+          a2hs.style.display = "block";
+
+          var a2hsBtn = document.querySelector(".btn.ad2hs-prompt-button");
+          a2hsBtn.addEventListener("click", addToHomeScreen);
+
+      }
+
+      window.addEventListener('beforeinstallprompt', (e) => {
+          // Prevent Chrome 67 and earlier from automatically showing the prompt
+          e.preventDefault();
+          // Stash the event so it can be triggered later.
+          deferredPrompt = e;
+
+          showAddToHomeScreen();
+
+      });
+
+      // btnAdd.addEventListener('click', (e) => {
+      //     // hide our user interface that shows our A2HS button
+      //     btnAdd.style.display = 'none';
+      //     // Show the prompt
+      //     deferredPrompt.prompt();
+      //     // Wait for the user to respond to the prompt
+      //     deferredPrompt.userChoice
+      //         .then((choiceResult) => {
+      //             if (choiceResult.outcome === 'accepted') {
+      //                 console.log('User accepted the A2HS prompt');
+      //             } else {
+      //                 console.log('User dismissed the A2HS prompt');
+      //             }
+      //             deferredPrompt = null;
+      //         });
+      // });
+
+
   </script>
