--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,11 @@
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
-<title>Base Example</title>
+<title>Aurora Inverter Centraline</title>
 <body>
   <div id="container" class="app-container"></div>
 
   <!--<script src="../__build__/shared.js"></script>-->
+  <script src="settings.json"></script>
   <script src="../aurora-web.js"></script>
 
